fixed spacing

--- a/src/Elements/Page/Page.scss
+++ b/src/Elements/Page/Page.scss
@@ -22,6 +22,10 @@
 
       &:not(:first-child) {
         margin-left: $Spacing4;
+
+        @media (max-width: 760px) {
+          margin-left: $Spacing2;
+        }
       }
     }
 
